--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -964,7 +964,7 @@
   "GhostIgnoreTasks": "Ghosts Exempt From Tasks",
   "DisableTaskWin": "Disable Task Win",
   "DisableTaskWinIfAllCrewsAreDead": "Disable Task Win If All <#8cffff>Crewmates</color> Are Dead",
-  "DisableTaskWinIfAllCrewsAreConverted": "Disable Task Win If All <#8cffff>Crewmates</color> Are <#ffab1b>Converted</color>",
+  "DisableTaskWinIfAllCrewsAreConverted": "Disable Task Win If All Alive <#8cffff>Crewmates</color> Are <#ffab1b>Converted</color>",
   "CanSabotage": "Can Sabotage",
   "HideGameSettings": "Hide Game Settings",
   "DIYGameSettings": "Enable only custom /n messages",
@@ -1190,6 +1190,7 @@
   "GSRomanticState.6": "<#ff1493>Romantic</color> pair state: <#ff0000>Broken</color>",
   "GSRomanticState.8": "<#ff1493>Romantic</color> pair state: <#ff0000>Broken</color>",
   "GSRomanticState.24": "<#ff1493>Romantic</color> pair state: <#ff1493>Exists</color>",
+  "MyRoleCommandHelp": "<size=80%><#00ffa5>⇨ Type <#00a5ff>/m</color> in the next meeting for the full description of your role ⇦</color></size>",
   "Cooldown": "Cooldown",
   "CurseCooldown": "Curse Cooldown",
   "FreezeAfterCurseKill": "Freeze After Killing via Cursed Player",
@@ -1614,7 +1615,6 @@
   "KB_BootVentWhenDead": "Boot players who get stuck in the vent (may trigger official anti cheating)",
   "JudgeTryHideMsg": "Hide <color=#f8d85a>Judge</color>'s commands",
   "TrialLimitPerMeeting": "Max Trials per Meeting",
-  "TrialLimitPerGame": "Max Trials per Game",
   "JudgeCanTrialMadmate": "Can trial <color=#ff1919>Madmates</color>",
   "JudgeCanTrialConverted": "Can trial <#ffab1b>Converted</color> players",
   "VeteranSkillMaxOfUseage": "(Initial) Max number of Alerts",
@@ -3316,7 +3316,7 @@
   "TeleportedByTornado": "\\nOh no! You just got caught up in a tornado,\\nand you flew to over here!",
   "Sentinel": "Sentinel",
   "SentinelInfo": "Scare Killers Away",
-  "SentinelInfoLong": "(Crewmates):\\nAs the Sentinel, you may vent to start patrolling your surrounding area. When you do, all killers within this area are notified to dip. If any killer attempts to kill someone within this area while you're patrolling, you'll kill them instead.",
+  "SentinelInfoLong": "(Crewmates):\\nAs the Sentinel, you may vent to start patrolling your surrounding area. When you do, all killers within this area are notified to dip. If any killer attempts to kill someone within this area while you're patrolling, you'll kill them instead. When patrolling is over, all killers in the patrolling area suicide. While patrolling, you have lower vision.",
   "SentinelPatrolDuration": "Patrol Time",
   "SentinelPatrolRadius": "Patrol Radius",
   "KillerEscapedFromSentinel": "<#00ff00>Successfully went out of patrolling radius</color>",
@@ -3943,20 +3943,26 @@
   "ModeCaptureTheFlag": "Gamemode: Capture The Flag",
   "ModeDescribe.CaptureTheFlag": "In the Capture The Flag gamemode, there are two teams: Yellow and Blue. Each team has a flag in their base. The goal is to capture the enemy's flag and bring it back to your base. The first team to capture the enemy's flag wins!\\n\\nYou can grab the flag by petting your pet near it.\\n\\nPlayers can be tagged by the enemy team, which will send them back to their base or kill them, depending on the settings. Players who are carrying a flag cannot tag other players.",
   "CTF_AlertTeamMembersOfFlagTaken": "Alert Team Members When their Flag is Taken",
+  "CTF_ArrowToEnemyFlagCarrier": "Arrow to Enemy Flag Carrier",
+  "CTF_AlertTeamMembersOfEnemyFlagTaken": "Alert Team Members When the Enemy's Flag is Taken",
+  "CTF_ArrowToOwnFlagCarrier": "Arrow to Own Flag Carrier",
   "CTF_TaggedPlayersGet": "Tagged Players get",
   "CTF_TaggedPlayersGet.SentBackToBase": "Sent Back to Base",
   "CTF_TaggedPlayersGet.Killed": "Killed",
   "CTF_WhenFlagCarrierGetsTagged": "When the Flag Carrier Gets Tagged, the Flag is",
   "CTF_WhenFlagCarrierGetsTagged.FlagIsDropped": "Dropped",
   "CTF_WhenFlagCarrierGetsTagged.FlagIsReturned": "Returned",
+  "CTF_SpeedReductionForFlagCarrier": "Speed Reduction for Flag Carriers",
   "CTFPlayer": "Capture The Flag",
   "CTFPlayerInfo": "CAPTURE THE ENEMY'S FLAG TO WIN",
   "CTFPlayerInfoLong": "CAPTURE THE ENEMY'S FLAG TO WIN",
   "CTF_FlagTaken": "The enemy took your flag!",
+  "CTF_EnemyFlagTaken": "Your team took the enemy's flag!",
   "CTF_BlueTeamWins": "The Blue Team wins!",
   "CTF_YellowTeamWins": "The Yellow Team wins!",
   "CTF_PlayerStats": "<#00ffa5>Total Flag Carrying Time: <#ffffff>{0}s</color> - Total Tags: <#ffffff>{1}</color></color>",
   "CTF_Notify_EnemyTeamRoom": "The enemy team is in <#00ffa5>{0}</color>",
+  "CTF_TeamMemberFallen": "{0} has fallen!",
   "HideAndSeek": "HIDE AND SEEK",
   "ModeHideAndSeek": "Gamemode: Hide And Seek",
   "ModeDescribe.HideAndSeek": "In the Hide And Seek gamemode, seekers have to kill all hiders, while hiders have to complete all tasks without being killed in order to win.\\nIf the time limit reaches 0, hiders win.\\n\\nRoles: Hider, Seeker, Fox, Troll, Jumper, Detector, Jet, Dasher, Locator, Venter, Agent, Taskinator",
@@ -4356,8 +4362,8 @@
   "RememberedCrewmate": "You remembered you were a Crewmate!",
   "RememberedLover": "You remembered you were a Lover!",
   "RememberButtonText": "Remember",
+  "CanRememberCrewPower": "Can Remember <#8cffff>Crewmate</color> <#fbff00>Power</color> Roles",
   "IncompatibleNeutralMode": "If neutral is incompatible, turn into",
-  "IncompatibleCrewmateMode": "If crewmate is incompatible, turn into",
   "ImmuneToAttacksWhenTasksDone": "Immune to attacks on task completion",
   "OptionWatcher": "Can sell Watcher",
   "OptionKnighted": "Can sell Knighted",
@@ -4461,7 +4467,8 @@
   "MurderHelp": "Command: /tl [player ID]\\nYou can see the players' IDs before the players' names.\\nOr use /id to view the list of all player IDs.",
   "MurderNull": "Please choose a living player to murder.",
   "MurderKillTitle": "[★ Court ★]",
-  "MurderLimitPerMeeting": "Maximum Meeting Kills Per Game",
+  "MurderLimitPerMeeting": "Maximum Meeting Kills Per Meeting",
+  "CouncillorMurderMaxMeeting": "You cannot murder more players in this meeting. You've reached the limit set by the host.",
   "CouncillorCanMurderMadmate": "Can Murder <color=#ff1919>Madmates</color>",
   "CouncillorCanMurderImpostor": "Can Murder <color=#ff1919>Impostors</color>",
   "CouncillorTryHideMsg": "Try to hide Councillor's commands",
