--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1652,6 +1652,7 @@
   "InfectiousBiteCooldown": "Infect Cooldown",
   "KnowTargetRole": "Knows role of target",
   "TargetKnowsLawyer": "Target knows their <color=#008080>Lawyer</color>",
+  "YourLawyerIsNotify": "Your <color=#008080>Lawyer</color> is {0}. They win if you win.",
   "InfectiousBiteCooldownIncrese": "Infect Cooldown Increase Per Use",
   "InfectiousBiteMax": "Maximum Infections",
   "InfectiousKnowTargetRole": "Know <color=#7B8968>infected</color> player's role",
