New role: Whisperer

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2929,6 +2929,18 @@
   "MafiosoProgressText": "<color=#00ffa5>Tier:</color> <color=#ffffff>{0}</color>, <color=#00ffa5>XP:</color> <color=#ffffff>{1}</color>",
   "MafiosoHUDText": "<color=#00ffa5>Tier:</color> {0}\\n<color=#00ffa5>XP:</color> {1}",
   "MafiosoHUDTextWithDualPistols": "<color=#00ffa5>Tier:</color> {0}, <color=#00ffa5>XP:</color> {1}\\n",
+  "Whisperer": "Whisperer",
+  "WhispererInfo": "Question Souls to Get Info",
+  "WhispererInfoLong": "(Crewmates):\\nAs the Whisperer, you can ask the souls of dead players for information. You'll see the souls of the players who have died (after the next meeting) and can question them by petting your pet on them. You have to stay near the soul for a few seconds. You then get random details on the soul or the killer in the chat.",
+  "WhispererCooldown": "Questioning Cooldown",
+  "WhispererDuration": "Questioning Duration",
+  "WhispererInfo.Color": "A {0} color killed me (<size=50%>{1}</color>)",
+  "WhispererInfo.ColorDark": "<#555555>darker</color>",
+  "WhispererInfo.ColorLight": "<#fdffbf>lighter</color>",
+  "WhispererInfo.Time": "I died {0} seconds before the meeting started",
+  "WhispererInfo.Role": "I was {0}",
+  "WhispererInfo.KillerRole": "My killer was {0}",
+  "WhispererQuestioning": "Questioning {0}... {1}%",
   "Altruist": "Altruist",
   "AltruistInfo": "Erase your killer's role",
   "AltruistInfoLong": "(Crewmates):\\nAs the Altruist, if an impostor kills you, they will lose their abilities and become a regular impostor or shapeshifter.",
