--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -545,7 +545,7 @@
   "MedusaInfo": "Stone bodies by reporting them",
   "FamineInfo": "Give out your poisoned bread",
   "SpiritcallerInfo": "Turn Players into Evil Spirits",
-  "AmnesiacInfo": "Use the kill button to copy someone's role",
+  "AmnesiacInfo": "Copy someone's role",
   "MasochistInfo": "Get attacked a few times to win!",
   "DoomsayerInfo": "Successfully guess players to win",
   "LoversInfo": "Stay alive and win together",
