--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -841,6 +841,7 @@
   "DisableMeeting": "Disable Meetings",
   "DisableCloseDoor": "Disable Doors sabotage",
   "DisableSabotage": "Disable Sabotages",
+  "ShowAntiBlackoutWarning": "Show Anti-Blackout Warning When the Ejection Screen is Overridden",
   "NoGameEnd": "No Game End",
   "AllowConsole": "Console",
   "DebugMode": "Debug Mode",
@@ -1338,6 +1339,7 @@
   "ExecutionerCanTargetImpostor": "Can Target <color=#ff1919>Impostors</color>",
   "ExecutionerCanTargetNeutralKiller": "Can Target <color=#ffab1b>Neutral</color> <color=#ff1919>Killing</color>",
   "ExecutionerChangeRolesAfterTargetKilled": "When Target Dies, <color=#c0c0c0>Executioner</color> becomes",
+  "ExecutionerChangeRole": "Your role was changed to {0}",
   "CanTargetNeutralBenign": "Can Target <color=#ffab1b>Neutral</color> <color=#046300>Benign</color>",
   "CanTargetNeutralEvil": "Can Target <color=#ffab1b>Neutral</color> <color=#912900>Evil</color>",
   "SidekickSheriffCanGoBerserk": "<color=#00b4eb>Recruited</color> <color=#f8cd46>Sheriff</color> Can Go Nuts",
@@ -1346,6 +1348,7 @@
   "LawyerCanTargetCrewmate": "Can Target <color=#8cffff>Crewmates</color>",
   "LawyerCanTargetJester": "Can Target <color=#ec62a5>Jester</color>",
   "LawyerChangeRolesAfterTargetKilled": "When Target Dies, <color=#008080>Lawyer</color> becomes",
+  "LawyerChangeRole": "Your role was changed to {0}",
   "SerialKillerLimit": "Time Until Suicide",
   "ArsonistDouseTime": "Douse Duration",
   "CanTerroristSuicideWin": "Can Win By Suicide",
