Add Assumer, add Deadlined (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1787,6 +1787,7 @@
   "DeathReason.Consumed": "Consumed",
   "DeathReason.BadLuck": "Bad Luck",
   "DeathReason.Asthma": "Asthma",
+  "DeathReason.Assumed": "Assumed",
   "Alive": "Alive",
   "Win": " Wins!",
   "Last-": "Last ",
@@ -2209,6 +2210,7 @@
   "CommandDescription.Decree": "Use a decree as the President",
   "CommandDescription.AddVIP": "Add a player to the VIP list",
   "CommandDescription.DeleteVIP": "Remove a player from the VIP list",
+  "CommandDescription.Assume": "Assume how many votes a player will receive as the Assumer",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2264,6 +2266,8 @@
   "CommandArgs.Decree.Number": "0/1/2/3/4/5 (leave blank to view all decrees)",
   "CommandArgs.AddVIP.Id": "The player's ID to add to the VIP list",
   "CommandArgs.DeleteVIP.Id": "The player's ID to remove from the VIP list",
+  "CommandArgs.Assume.Id": "The player's ID to assume votes for",
+  "CommandArgs.Assume.Number": "The number of votes to assume",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
@@ -3332,6 +3336,17 @@
   "TornadoDuration": "Tornado Duration",
   "TornadoRange": "Tornado Range",
   "TeleportedByTornado": "\\nOh no! You just got caught up in a tornado,\\nand you flew to over here!",
+  "Deadlined": "Deadlined",
+  "DeadlinedInfo": "Must do a task or kill each round",
+  "DeadlinedInfoLong": "(Add-ons):\\nAs the Deadlined, you must complete a task or kill someone each round. If you fail to do so, you will die. If a meeting gets called too soon after the previous one ends (time set by the host), you won't die.",
+  "Prefix.Deadlined": "Deadlined",
+  "Deadlined.InactiveTime": "Safe Time After Meetings",
+  "Assumer": "Assumer",
+  "AssumerInfo": "Assume Vote Counts",
+  "AssumerInfoLong": "(Impostors):\\nAs the Assumer, you can type <b>/assume {id} {number}</b> to assume that the selected player (whose ID you typed as the first argument, replacing '{id}') will get exactly {number} votes (the number you typed in the second argument, replacing '{number}').\\nExample: <b>/assume 0 3</b> (assume that the host gets 3 votes).\\n\\nIf you are correct, <u>every player</u> that voted for your target dies.",
+  "Assumer.AssumedMessage": "You're assuming that {0} will receive <b>{1}</b> votes",
+  "Assumer.VoteReceiverDies": "Vote Receiver Dies on Correct Assumption",
+  "Assumer.MinPlayersToAssume": "Minimum Alive Players to Make Assumptions",
   "Sentinel": "Sentinel",
   "SentinelInfo": "Scare Killers Away",
   "SentinelInfoLong": "(Crewmates):\\nAs the Sentinel, you may vent to start patrolling your surrounding area. When you do, all killers within this area are notified to dip. If any killer attempts to kill someone within this area while you're patrolling, you'll kill them instead. When patrolling is over, all killers in the patrolling area suicide. While patrolling, you have lower vision.",
