--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3996,6 +3996,7 @@
   "CTF_PlayerStats": "<#00ffa5>Total Flag Carrying Time: <#ffffff>{0}s</color> - Total Tags: <#ffffff>{1}</color></color>",
   "CTF_Notify_EnemyTeamRoom": "The enemy team is in <#00ffa5>{0}</color>",
   "CTF_TeamMemberFallen": "{0} has fallen!",
+  "CTF_ButtonText": "PICK UP",
   "HideAndSeek": "HIDE AND SEEK",
   "ModeHideAndSeek": "Gamemode: Hide And Seek",
   "ModeDescribe.HideAndSeek": "In the Hide And Seek gamemode, seekers have to kill all hiders, while hiders have to complete all tasks without being killed in order to win.\\nIf the time limit reaches 0, hiders win.\\n\\nRoles: Hider, Seeker, Fox, Troll, Jumper, Detector, Jet, Dasher, Locator, Venter, Agent, Taskinator",
@@ -4283,6 +4284,14 @@
   "RouleteGrandeurInfo": "Play Russian Roulette",
   "RouleteGrandeurInfoLong": "(Neutrals):\\nAs the Roulette Grandeur, you can play Russian Roulette to reduce your kill cooldown after the next kill you make. Vent to cycle between the amount of risk (bullets) you put in. There are 5 slots. If you land on a bullet, you die. If you survive, your kill cooldown is permanately reduced by a set amount <i>multiplied by the risk (bullets) you put in</i>! Sabotage or pet your pet to play a round with the chosen risk factor.",
   "KCDReduction": "Kill Cooldown Reduction (multiplied by the amount of bullets put in)",
+  "Tank": "Tank",
+  "TankInfo": "Vent in Every Vent",
+  "TankInfoLong": "(Neutrals):\\nAs the Tank, you must vent in every vent on the map. If you succeed to do so before the end of the game, you win with the winning team at the end. Otherwise, you lose. Your speed is significantly lower than others'.",
+  "GuessTank": "According to the host's settings, the Tank cannot be guessed.",
+  "Tank.Speed": "Movement Speed",
+  "Tank.CanBeGuessed": "Can be Guessed",
+  "Tank.CanBeKilled": "Can be Killed",
+  "Tank.Suffix": "<size=80%><#00ffa5>A random vent you haven't entered yet:</color> {0}</size>",
   "RG.Hit": "<#ffff00>The hit landed on one of your bullets!\\nBetter luck next time!</color>",
   "RG.NoHit": "<#00ffa5>You survived, despite putting in <#8cffff>{0}</color> bullets.\\nYour kill cooldown was reduced by <#8cffff>{1}s</color>!</color>",
   "RG.Suffix": "<#00ffa5>Bullets:</color> <b>{0}</b>",
