--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3904,6 +3904,9 @@
   "JournalistError.IndexOutOfRange": "You didn't provide enough arguments.",
   "JournalistError.ArgumentOutOfRange": "The index you provided is out of range. Use <b>/note view</b> to see the indexes of your notes.",
   "JournalistError.Unknown": "An unknown error occurred.",
+  "Grappler": "Grappler",
+  "GrapplerInfo": "Prevent kills and pull players towards you",
+  "GrapplerInfoLong": "(Crewmates):\\nAs the Grappler, you can prevent 1 kill in each round if you have an ability use left at the end of the last round. The first kill attempt will be blocked and the target will be teleported to you and not die. Your ability doesn't work during sabotages.",
   "ModeStandard": "Gamemode: Standard",
   "FFA": "Free For All",
   "ModeFFA": "Gamemode: FFA",
