--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1788,6 +1788,7 @@
   "DeathReason.BadLuck": "Bad Luck",
   "DeathReason.Asthma": "Asthma",
   "DeathReason.Assumed": "Assumed",
+  "DeathReason.Negotiation": "Negotiation",
   "Alive": "Alive",
   "Win": " Wins!",
   "Last-": "Last ",
@@ -2213,6 +2214,7 @@
   "CommandDescription.Assume": "Assume how many votes a player will receive as the Assumer",
   "CommandDescription.Note": "Manage your notes as the Journalist",
   "CommandDescription.OS": "Set the spawn chance of a role",
+  "CommandDescription.Negotiation": "Pick your negotiation method when asked by the Negotiator",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2274,6 +2276,7 @@
   "CommandArgs.Note.UnknownValue": "The note to add, the index of the note to remove, or blank",
   "CommandArgs.OS.Chance": "The spawn chance for the role",
   "CommandArgs.OS.Role": "The role to set the spawn chance for",
+  "CommandArgs.Negotiation.Number": "The index of the picked negotiation method (0/1/2/3)",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
@@ -4168,6 +4171,19 @@
   "BanditStealMode": "Steal happens",
   "BanditCanStealBetrayalAddon": "Can Steal Betrayal Addons",
   "BanditCanStealImpOnlyAddon": "Can Steal <color=#ff1919>Impostor</color> Only Addons",
+  "Negotiator": "Negotiator",
+  "NegotiatorInfo": "Negotiate with Players",
+  "NegotiatorInfoLong": "(Crewmates):\\nAs the Negotiator, you can negotiate with someone by voting for them in a meeting. Your target then has to choose between suiciding, receiving a harmful add-on, permanently getting low vision or low speed.\\n\\nIf they don't pick, the default action is suicide. They can use <b>/neg {index}</b> to pick.\\nYou can only negotiate once per meeting. After the meeting, you'll know what your target picked.",
+  "Negotiator.LowVision": "Low vision",
+  "Negotiator.LowSpeed": "Low speed",
+  "Negotiator.Type.Suicide": "Suicide",
+  "Negotiator.Type.HarmfulAddon": "Receive a Harmful Add-on",
+  "Negotiator.Type.LowVision": "Get Permanent low vision",
+  "Negotiator.Type.LowSpeed": "Get Permanent low speed",
+  "Negotiator.FinishNotify": "<#00ffa5>Your target chose to</color> {0}",
+  "Negotiator.TargetMessage": "<b><u>The Negotiator forced you to pick one of the following options (use <b>/neg {index}</b>, replacing {index} with the number shown before the option you want, e.g. <b>/neg 1</b>), or you die:</u></b>\\n<size=80%>",
+  "Negotiator.Title": "<#ffff00>⚠ Negotiator ⚠</color>",
+  "Negotiator.TargetPickSuccess": "You've chosen to <b>{0}</b>",
   "Commander": "Commander",
   "CommanderInfo": "Command your team",
   "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 6 modes by venting/petting your pet. You can execute the selected action by shapeshifting.<size=70%>\\n\\n<b><u>Mark:</u></b> Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\n<b><u>Whistle:</u></b> This tells all or 1 specific<sup>*</sup> impostor(s) to come to you and gives them (each) an arrow pointing towards you.\\n\\n<b><u>Kill Anyone:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to kill anyone.\\n\\n<b><u>Leave Player Alive:</u></b> Shapeshifting into a crewmate marks that player with a unique color and text telling other impostors to not kill that player. Shapeshifting into an impostor tells that impostor to not kill anyone.\\n\\n<b><u>Don't Sabotage:</u></b> Notifies all impostors to not call any sabotage.\\n\\n<b><u>Use Ability:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to use their ability.\\n\\n<size=60%><sup>*</sup> If you shapeshift into an impostor, the action executes specifically and only on them.</size></size>",
