--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1554,7 +1554,7 @@
   "EnergeticInfoLong": "(Add-ons):\\nAs the Energetic, the cooldown of your ability is reduced by 25%.",
   "Prefix.Energetic": "Energetic",
   "Messenger": "Messenger",
-  "MessengerInfo": "Send a Message to Dead Players",
+  "MessengerInfo": "Send a Message to Players After Death",
   "MessengerInfoLong": "(Add-ons):\\nAs the Messenger, after you die, you can send a message in a meeting to the alive players by typing <b>/hm {number}</b>, replacing {number} with the corresponding index of the messages listed below:\\n\\n<size=70%><b>1.</b> The player that killed me was last in <room>\\n   Example: The player that killed me was last in Cafeteria\\n\\n<b>2.</b> The killer's role is <role>\\n   Example: The killer's role is Ninja\\n\\n<b>3.</b> I was a(n) <Crewmate/Impostor/Neutral>\\n   Example: I was a Crewmate</size>\\n\\nExample use: <b>/hm 1</b> - This will send the first message to the alive players.",
   "Prefix.Messenger": "Messenger",
   "MessengerMessage.1": "The player that killed me was last in {0}",
@@ -4041,7 +4041,7 @@
   "CTF_ButtonText": "PICK UP",
   "NaturalDisasters": "NATURAL DISASTERS",
   "ModeNaturalDisasters": "Gamemode: Natural Disasters",
-  "ModeDescribe.NaturalDisasters": "In the Natural Disasters gamemode, the map is filled with natural disasters. You have to survive them all and be the last player alive to win!<size=80%>\\n\\nList of all Natural Disasters and their effects:</size><size=70%>\\n- Earthquake: The ground shakes, making it hard to move.\\n- Meteor: A meteor falls from the sky, killing players in a certain range.\\n- Volcano Eruption: Lava flows from one spot, killing players.\\n- Tornado: Players are sucked into the tornado and die.\\n- Thunderstorm: Lightning strikes outside of rooms, killing players that are hit by it.\\n- Sandstorm: Sand blows, making it hard to see.\\n- Tsunami: A giant wave comes moving in a specific direction, drowning players that are in the way.\\n- Sinkhole: The ground collapses, killing players in range and any players that enter this range in the future.\\n- Building Collapse: A building on the ship collapses, killing everyone inside it. Collapsed rooms cannot be entered in the future.</size>",
+  "ModeDescribe.NaturalDisasters": "In the Natural Disasters gamemode, the map is filled with natural disasters. You have to survive them all and be the last player alive to win!<size=80%>\\n\\nList of all Natural Disasters and their effects:</size><size=70%>\\n- Earthquake: The ground shakes, making it hard to move.\\n- Meteor: A meteor falls from the sky, killing players in a certain range.\\n- Volcano Eruption: Lava flows from one spot, killing players.\\n- Tornado: Players are sucked into the tornado and die.\\n- Thunderstorm: Lightning strikes outside of rooms, killing players that it hits.\\n- Sandstorm: Sand blows, making it hard to see.\\n- Tsunami: A giant wave comes moving in a specific direction, drowning players that are on the way.\\n- Sinkhole: The ground collapses, killing players in range and any players that enter this range in the future.\\n- Building Collapse: A building on the ship collapses, killing everyone inside it. Collapsed rooms cannot be entered in the future.</size>",
   "ND_DisasterFrequency": "Disaster Frequency",
   "ND_DisasterWarningTime": "Disaster Warning Time",
   "ND_Earthquake.DurationOpt": "Earthquake Duration",
